--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "googleapis": "^104.0.0",
     "helmet": "^5.1.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.3",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "nodemailer": "^6.7.5"
   }
 }
