--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.0",
+    "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "googleapis": "^104.0.0",
     "helmet": "^5.1.0",
     "jwt-simple": "^0.5.6",
